--- a/Teaser1.html
+++ b/Teaser1.html
@@ -1,7 +1,7 @@
 <html>
 <title>ZEDSTUDIOZ</title>
 <body>
-    <video autoplay loop src="img/Flaws 1.0.mp4" ></video>
+    <video autoplay loop src="https://youtu.be/DtGQ3-Cim3c" ></video>
 </body>
 
 </html>
