--- a/Teaser1.html
+++ b/Teaser1.html
@@ -1,7 +1,8 @@
 <html>
 <title>ZEDSTUDIOZ</title>
 <body>
-    <video autoplay loop src="https://youtu.be/DtGQ3-Cim3c" ></video>
+       <iframe  width="100%" height="100%" src="https://www.youtube.com/embed/DtGQ3-Cim3c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
 </body>
 
 </html>
