--- a/Teaser2.html
+++ b/Teaser2.html
@@ -1,6 +1,7 @@
 <html>
 <title>ZEDSTUDIOZ</title>
 <body>
-    <video autoplay loop src="img/Flaws 2.0.mp4" ></video>
+       <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Ffr4Zl-5v1k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
 </body>
 </html>
