--- a/categories.html
+++ b/categories.html
@@ -17,6 +17,7 @@
 	<link rel="stylesheet" href="css/owl.carousel.css"/>
 	<link rel="stylesheet" href="css/style.css"/>
 	<link rel="stylesheet" href="css/animate.css"/>
+	<link rel="stylesheet" href="categories.css"/>
 
 
 	<!--[if lt IE 9]>
@@ -77,7 +78,7 @@
 
 	<!-- Page info section -->
 	<section class="page-info-section set-bg" style="background-color: black;">
-		<video  autoplay loop src="img/Flaws.mp4" width="1920" height="495"></video>
+		<video class="first__video"  autoplay loop src="img/Flaws.mp4" width="1920" height="495"></video>
 		<div class="pi-content">
 			<div class="container">
 				<div class="row">
