--- a/categories.html
+++ b/categories.html
@@ -77,7 +77,9 @@
 
 	<!-- Page info section -->
 	<section class="page-info-section set-bg" style="background-color: black;">
-		<video  autoplay loop src="img/Flaws.mp4" width="1920" height="495"></video>
+		<div class="video-container">
+			<video  autoplay loop src="img/Flaws.mp4" width="1920" height="495"></video>
+		</div>
 		<div class="pi-content">
 			<div class="container">
 				<div class="row">
