--- a/categories.html
+++ b/categories.html
@@ -78,7 +78,7 @@
 	<!-- Page info section -->
 	<section class="page-info-section set-bg" style="background-color: black;">
 		<div class="video-container">
-			<video  autoplay loop src="img/Flaws.mp4" width="1920" height="495"></video>
+			<video  autoplay loop src="img/Flaws.mp4" width="1920" height="495" class="first__video"></video>
 		</div>
 		<div class="pi-content">
 			<div class="container">
